--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,9 @@
-DEBUG = 1
+DEBUG = 0
 SECRET_KEY = 2_&0lv1q_hwko46mxkti=*tu59ijl&0(fj70)^#mma$$0u3d5g
 DJANGO_ALLOWED_HOSTS = localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=do_it_django_dev
-SQL_USER=do_it_django_db_user
-SQL_PASSWORD=do_it_django_db_password
+SQL_DATABASE=do_it_django_prod
+SQL_USER=hyennoh
+SQL_PASSWORD=gPsdh
 SQL_HOST=db
 SQL_PORT=5432
